add get latest n block, get specific block, get tx by hash API, can get data from ethereum
